feat: add fonts

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,8 @@
       <div class="container">
          <div class="header__inner">
             <a class="logo" href="#">
-               <img class="logo__img" src="images/logo.png" alt="logo">
+               <img class="logo__img" src="images/logo.svg" alt="logo">
+               Glee
             </a>
             <nav class="menu">
                <ul class="menu__list">
@@ -41,12 +42,14 @@
                <a href="" class="user-nav__item">
                   <img class="user-nav__icon" src="images/icons/search.svg" alt="search icon">
                </a>
-               <a href="" class="user-nav__item">
-                  <img class="user-nav__icon" src="images/icons/heart.svg" alt="heart icon">
-               </a>
-               <a href="" class="user-nav__item">
-                  <img class="user-nav__icon" src="images/icons/cart.svg" alt="cart icon">
-               </a>
+               <div class="user-nav__smart">
+                  <a href="" class="user-nav__item">
+                     <img class="user-nav__icon" src="images/icons/heart.svg" alt="heart icon">
+                  </a>
+                  <a href="" class="user-nav__item">
+                     <img class="user-nav__icon" src="images/icons/cart.svg" alt="cart icon">
+                  </a>
+               </div>
                <a href="" class="user-nav__item">
                   <img class="user-nav__icon" src="images/icons/dots.svg" alt="others icon">
                </a>
