feat: add header

--- a/app/index.html
+++ b/app/index.html
@@ -14,43 +14,45 @@
          <div class="header__inner">
             <a class="logo" href="#">
                <img class="logo__img" src="images/logo.svg" alt="logo">
-               Glee
+               <span class="logo__name">Glee</span>
             </a>
             <nav class="menu">
                <ul class="menu__list">
                   <li class="menu__list-item">
-                     <a href="#" class="menu__list-link"></a>
+                     <a href="#" class="menu__list-link">Home +</a>
                   </li>
                   <li class="menu__list-item">
-                     <a href="#" class="menu__list-link"></a>
+                     <a href="#" class="menu__list-link">About</a>
                   </li>
                   <li class="menu__list-item">
-                     <a href="#" class="menu__list-link"></a>
+                     <a href="#" class="menu__list-link">Services</a>
                   </li>
                   <li class="menu__list-item">
-                     <a href="#" class="menu__list-link"></a>
+                     <a href="#" class="menu__list-link">Pages +</a>
                   </li>
                   <li class="menu__list-item">
-                     <a href="#" class="menu__list-link"></a>
+                     <a href="#" class="menu__list-link">News</a>
                   </li>
                   <li class="menu__list-item">
-                     <a href="#" class="menu__list-link"></a>
+                     <a href="#" class="menu__list-link">Contact</a>
                   </li>
                </ul>
             </nav>
             <div class="user-nav">
-               <a href="" class="user-nav__item">
+               <a class="user-nav__item" href="#">
                   <img class="user-nav__icon" src="images/icons/search.svg" alt="search icon">
                </a>
-               <div class="user-nav__smart">
-                  <a href="" class="user-nav__item">
+               <div class="user-nav__item">
+                  <a class="user-nav__smart-item" href="#">
                      <img class="user-nav__icon" src="images/icons/heart.svg" alt="heart icon">
+                     <span class="user-nav__num">0</span>
                   </a>
-                  <a href="" class="user-nav__item">
+                  <a class="user-nav__smart-item" href="#">
                      <img class="user-nav__icon" src="images/icons/cart.svg" alt="cart icon">
+                     <span class="user-nav__num">0</span>
                   </a>
                </div>
-               <a href="" class="user-nav__item">
+               <a class="user-nav__item" href="#">
                   <img class="user-nav__icon" src="images/icons/dots.svg" alt="others icon">
                </a>
             </div>
