--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,130 @@
       </div>
    </header>
 
+   <main class="main">
+      <section class="main-slider">
+         <div class="container-2">
+            <div class="slider-top">
+               <div class="slider-top__item">
+                  <div class="slider-top__content">
+                     <h3 class="slider-top__title">
+                        SMART AND
+                        TRENDY
+                     </h3>
+                     <p class="slider-top__subtitle">
+                        Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                     </p>
+                     <a class="slider-top__btn" href="#">
+                        Shop Now
+                     </a>
+                  </div>
+                  <img class="slider-top__img" src="images/slides/photo.png" alt="slides image">
+               </div>
+               <div class="slider-top__item">
+                  <div class="slider-top__content">
+                     <h3 class="slider-top__title">
+                        SMART AND
+                        TRENDY
+                     </h3>
+                     <p class="slider-top__subtitle">
+                        Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                     </p>
+                     <a class="slider-top__btn" href="#">
+                        Shop Now
+                     </a>
+                  </div>
+                  <img class="slider-top__img" src="images/slides/photo.png" alt="slides image">
+               </div>
+               <div class="slider-top__item">
+                  <div class="slider-top__content">
+                     <h3 class="slider-top__title">
+                        SMART AND
+                        TRENDY
+                     </h3>
+                     <p class="slider-top__subtitle">
+                        Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                     </p>
+                     <a class="slider-top__btn" href="#">
+                        Shop Now
+                     </a>
+                  </div>
+                  <img class="slider-top__img" src="images/slides/photo.png" alt="slides image">
+               </div>
+            </div>
+            <div class="slider-bottom">
+               <div class="slider-bottom__item">
+                  <div class="slider-bottom__img-wrapper">
+                     <img class="slider-bottom__img" src="images/icons/support.svg" alt="support icon">
+                  </div>
+                  <div class="slider-bottom__content">
+                     <h6 class="slider-bottom__title">Support 24/7.</h6>
+                     <p class="slider-bottom__text">Contact us 24 hours a day, 7 days a week.</p>
+                  </div>
+               </div>
+               <div class="slider-bottom__item">
+                  <div class="slider-bottom__img-wrapper">
+                     <img class="slider-bottom__img" src="images/icons/delivery.svg" alt="delivery">
+                  </div>
+                  <div class="slider-bottom__content">
+                     <h6 class="slider-bottom__title">Delivery</h6>
+                     <p class="slider-bottom__text">Free shipping on all US order.</p>
+                  </div>
+               </div>
+               <div class="slider-bottom__item">
+                  <div class="slider-bottom__img-wrapper">
+                     <img class="slider-bottom__img" src="images/icons/payment.svg" alt="payment">
+                  </div>
+                  <div class="slider-bottom__content">
+                     <h6 class="slider-bottom__title">100% Payment secure.</h6>
+                     <p class="slider-bottom__text">We ensure secure payment with PEV.</p>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <section class="products">
+         <div class="products-bottom">
+            <div class="container-2">
+               <div class="products-bottom__inner">
+                  <div class="products-bottom__item">
+                     <img class="products-bottom__img" src="images/content/photo-1.png" alt="product of the week 1">
+                     <div class="products-bottom__content">
+                        <h4 class="products-bottom__title">
+                           Mirum Notare Tellus
+                        </h4>
+                        <p class="products-bottom__descr">
+                           LEDCornBulb Lamp 5W 7W 10W 12W 15W E26 E27LEDCornLight
+                        </p>
+                        <a class="products-bottom__link" href="#">
+                           View More
+                        </a>
+                     </div>
+                  </div>
+                  <div class="products-bottom__item">
+                     <img class="products-bottom__img" src="images/content/photo-2.png" alt="product of the week 2">
+                     <div class="products-bottom__content">
+                        <h4 class="products-bottom__title">
+                           Malesuada Tempor Euismod
+                        </h4>
+                        <p class="products-bottom__descr">
+                           50W 8000lm Compact Size for HID StreetLightReplacementLEDCornLight
+                        </p>
+                        <a class="products-bottom__link" href="#">
+                           View More
+                        </a>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <section class="video-popup">
+         <a class="video-popup__link" data-fancybox href="https://www.youtube.com/watch?v=9i5Rxc3ReQo">
+            <img class="video-popup__play" src="images/icons/play-btn.svg" alt="video play btn">
+         </a>
+      </section>
+   </main>
+
    <footer class="footer">
       <div class="container">
          <div class="footer-top">
