feat: add mixitup

--- a/app/index.html
+++ b/app/index.html
@@ -152,23 +152,23 @@
             </h3>
             <ul class="products-top__menu">
               <li class="products-top__menu-item">
-                <button class="products-top__menu-btn">All</button>
+                <button class="products-top__menu-btn" data-filter="all">All</button>
               </li>
               <li class="products-top__menu-item">
-                <button class="products-top__menu-btn">Furnitures</button>
+                <button class="products-top__menu-btn" data-filter=".furnitures">Furnitures</button>
               </li>
               <li class="products-top__menu-item">
-                <button class="products-top__menu-btn">Chairs</button>
+                <button class="products-top__menu-btn" data-filter=".chairs">Chairs</button>
               </li>
               <li class="products-top__menu-item">
-                <button class="products-top__menu-btn">Lighting</button>
+                <button class="products-top__menu-btn" data-filter=".lighting">Lighting</button>
               </li>
               <li class="products-top__menu-item">
-                <button class="products-top__menu-btn">Decor</button>
+                <button class="products-top__menu-btn" data-filter=".decor">Decor</button>
               </li>
             </ul>
             <div class="products-top__items">
-              <div class="products-item">
+              <div class="products-item mix furnitures">
                 <div class="products-item__img-box">
                   <img class="products-item__img" src="images/products/1.png" alt="products 1">
                   <div class="products-item__link-box">
@@ -200,7 +200,7 @@
                   <p class="products-item__price">$29.00</p>
                 </div>
               </div>
-              <div class="products-item">
+              <div class="products-item mix furnitures">
                 <div class="products-item__img-box">
                   <img class="products-item__img" src="images/products/2.png" alt="products 1">
                   <div class="products-item__link-box">
@@ -232,7 +232,7 @@
                   <p class="products-item__price">$29.00</p>
                 </div>
               </div>
-              <div class="products-item">
+              <div class="products-item mix chairs">
                 <div class="products-item__img-box">
                   <img class="products-item__img" src="images/products/3.png" alt="products 1">
                   <div class="products-item__link-box">
@@ -264,7 +264,7 @@
                   <p class="products-item__price">$29.00</p>
                 </div>
               </div>
-              <div class="products-item">
+              <div class="products-item mix decor">
                 <div class="products-item__img-box">
                   <img class="products-item__img" src="images/products/4.png" alt="products 1">
                   <div class="products-item__link-box">
@@ -296,7 +296,7 @@
                   <p class="products-item__price">$29.00</p>
                 </div>
               </div>
-              <div class="products-item">
+              <div class="products-item mix lightning">
                 <div class="products-item__img-box">
                   <img class="products-item__img" src="images/products/5.png" alt="products 1">
                   <div class="products-item__link-box">
@@ -328,7 +328,7 @@
                   <p class="products-item__price">$29.00</p>
                 </div>
               </div>
-              <div class="products-item">
+              <div class="products-item mix decor">
                 <div class="products-item__img-box">
                   <img class="products-item__img" src="images/products/6.png" alt="products 1">
                   <div class="products-item__link-box">
@@ -360,7 +360,7 @@
                   <p class="products-item__price">$29.00</p>
                 </div>
               </div>
-              <div class="products-item">
+              <div class="products-item mix furnitures">
                 <div class="products-item__img-box">
                   <img class="products-item__img" src="images/products/7.png" alt="products 1">
                   <div class="products-item__link-box">
@@ -392,7 +392,7 @@
                   <p class="products-item__price">$29.00</p>
                 </div>
               </div>
-              <div class="products-item">
+              <div class="products-item mix chairs">
                 <div class="products-item__img-box">
                   <img class="products-item__img" src="images/products/8.png" alt="products 1">
                   <div class="products-item__link-box">
@@ -474,12 +474,12 @@
           <h3 class="title design__title">New Design</h3>
           <ul class="design__menu">
             <li class="design__menu-item">
-              <button class="design__menu-btn">
+              <button class="design__menu-btn" data-filter="all">
                 All
               </button>
             </li>
             <li class="design__menu-item">
-              <button class="design__menu-btn">
+              <button class="design__menu-btn" data-filter="">
                 Furnitures
               </button>
             </li>
