feat: add section blog

--- a/app/index.html
+++ b/app/index.html
@@ -463,11 +463,6 @@
             </div>
          </div>
       </section>
-      <section class="video-popup">
-         <a class="video-popup__link" data-fancybox href="https://www.youtube.com/watch?v=9i5Rxc3ReQo">
-            <img class="video-popup__play" src="images/icons/play-btn.svg" alt="video play btn">
-         </a>
-      </section>
       <section class="design">
          <div class="container">
             <div class="design__inner">
@@ -570,6 +565,94 @@
                      </a>
                      <div class="design__img-wrap">
                         <img class="design__item-img" src="images/design/6.png" alt="6 photo">
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <section class="video-popup">
+         <a class="video-popup__link" data-fancybox href="https://www.youtube.com/watch?v=9i5Rxc3ReQo">
+            <img class="video-popup__play" src="images/icons/play-btn.svg" alt="video play btn">
+         </a>
+      </section>
+      <section class="blog">
+         <div class="container">
+            <div class="blog__top">
+               <h3 class="blog__title title">
+                  Our Insights & Articles
+               </h3>
+               <a class="blog__link" href="#">
+                  View All
+               </a>
+            </div>
+            <div class="blog__items">
+               <div class="blog-item">
+                  <div class="blog-item__img-box">
+                     <img class="blog-item__img" src="images/blog/1.jpg" alt="image 1">
+                     <a class="blog-item__link-category" href="#">
+                        NEWS
+                     </a>
+                  </div>
+                  <div class="blog-item__content">
+                     <a class="blog-item__title-link" href="#">
+                        <h4 class="blog-item__title">
+                           Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+                        </h4>
+                     </a>
+                     <div class="blog-item__info">
+                        <div class="blog-item__date">
+                           28 JANUARY, 2020
+                        </div>
+                        <a class="blog-item__author" href="#">
+                           BY ADMIN
+                        </a>
+                     </div>
+                  </div>
+               </div>
+               <div class="blog-item">
+                  <div class="blog-item__img-box">
+                     <img class="blog-item__img" src="images/blog/2.jpg" alt="image 2">
+                     <a class="blog-item__link-category" href="#">
+                        NEWS
+                     </a>
+                  </div>
+                  <div class="blog-item__content">
+                     <a class="blog-item__title-link" href="#">
+                        <h4 class="blog-item__title">
+                           Aonsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore 
+                        </h4>
+                     </a>
+                     <div class="blog-item__info">
+                        <div class="blog-item__date">
+                           28 JANUARY, 2020
+                        </div>
+                        <a class="blog-item__author" href="#">
+                           BY ADMIN
+                        </a>
+                     </div>
+                  </div>
+               </div>
+               <div class="blog-item">
+                  <div class="blog-item__img-box">
+                     <img class="blog-item__img" src="images/blog/3.jpg" alt="image 1">
+                     <a class="blog-item__link-category" href="#">
+                        NEWS
+                     </a>
+                  </div>
+                  <div class="blog-item__content">
+                     <a class="blog-item__title-link" href="#">
+                        <h4 class="blog-item__title">
+                           Rncididunt ut labore et dolore magna aliqua. Ut enim 
+                        </h4>
+                     </a>
+                     <div class="blog-item__info">
+                        <div class="blog-item__date">
+                           28 JANUARY, 2020
+                        </div>
+                        <a class="blog-item__author" href="#">
+                           BY ADMIN
+                        </a>
                      </div>
                   </div>
                </div>
