feat: add section partners

--- a/app/index.html
+++ b/app/index.html
@@ -576,7 +576,7 @@
             <img class="video-popup__play" src="images/icons/play-btn.svg" alt="video play btn">
          </a>
       </section>
-      <section class="blog">
+      <section class="blog blog--with-partners">
          <div class="container">
             <div class="blog__top">
                <h3 class="blog__title title">
@@ -657,6 +657,27 @@
                   </div>
                </div>
             </div>
+         </div>
+      </section>
+      <section class="partners partners--with-blog">
+         <div class="container">
+            <ul class="partners__list">
+               <li class="partners__list-item">
+                  <img class="partners__list-img" src="images/partners/1.png" alt="photo 1">
+               </li>
+               <li class="partners__list-item">
+                  <img class="partners__list-img" src="images/partners/2.png" alt="photo 2">
+               </li>
+               <li class="partners__list-item">
+                  <img class="partners__list-img" src="images/partners/3.png" alt="photo 3">
+               </li>
+               <li class="partners__list-item">
+                  <img class="partners__list-img" src="images/partners/4.png" alt="photo 4">
+               </li>
+               <li class="partners__list-item">
+                  <img class="partners__list-img" src="images/partners/5.png" alt="photo 5">
+               </li>
+            </ul>
          </div>
       </section>
    </main>
