fix: add missing parts of login page

--- a/app/login.html
+++ b/app/login.html
@@ -112,6 +112,27 @@
             </form>
          </div>
       </section>
+      <section class="partners">
+         <div class="container">
+            <ul class="partners__list">
+               <li class="partners__list-item">
+                  <img class="partners__list-img" src="images/partners/1.png" alt="photo 1">
+               </li>
+               <li class="partners__list-item">
+                  <img class="partners__list-img" src="images/partners/2.png" alt="photo 2">
+               </li>
+               <li class="partners__list-item">
+                  <img class="partners__list-img" src="images/partners/3.png" alt="photo 3">
+               </li>
+               <li class="partners__list-item">
+                  <img class="partners__list-img" src="images/partners/4.png" alt="photo 4">
+               </li>
+               <li class="partners__list-item">
+                  <img class="partners__list-img" src="images/partners/5.png" alt="photo 5">
+               </li>
+            </ul>
+         </div>
+      </section>
    </main>
 
    <footer class="footer">
