feat: add section achievements

--- a/app/about.html
+++ b/app/about.html
@@ -94,7 +94,9 @@
                      Mission of our creative house
                   </h3>
                   <p class="mission__text">
-                     consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                     consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                     enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
                   </p>
                   <div class="mission__items">
                      <div class="mission__item-wrapper">
@@ -122,6 +124,56 @@
                         </div>
                      </div>
                   </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <section class="achievements">
+         <div class="container">
+            <div class="achievements__items">
+               <div class="achievements__item">
+                  <div class="achievements__img-wrapper">
+                     <img class="achievements__img" src="images/about/icons/monitor.svg" alt="monitor">
+                  </div>
+                  <span class="achievements__num">
+                     99%
+                  </span>
+                  <p class="achievements__text">
+                     Satisﬁed Clients Rate
+                  </p>
+               </div>
+               <div class="achievements__item">
+                  <div class="achievements__img-wrapper">
+                     <img class="achievements__img" src="images/about/icons/truck.svg" alt="truck">
+                  </div>
+                  <span class="achievements__num">
+                     5020+
+                  </span>
+                  <p class="achievements__text">
+                     Products Delivered
+                  </p>
+               </div>
+               <div class="achievements__item">
+                  <div class="achievements__img-wrapper">
+                     <img class="achievements__img" src="images/about/icons/telephone.svg" alt="phone">
+                  </div>
+                  <span class="achievements__num">
+                     23hr
+                  </span>
+                  <p class="achievements__text">
+                     Daily Working Time
+                  </p>
+               </div>
+               <div class="achievements__item">
+                  <div class="achievements__img-wrapper">
+                     <img class="achievements__img" src="images/about/icons/brands.svg" alt="brands">
+                  </div>
+                  <span class="achievements__num">
+                     140+
+                  </span>
+                  <p class="achievements__text">
+                     Brands in Store
+                  </p>
                </div>
             </div>
          </div>
