feat: add sections team and partners to about

--- a/app/about.html
+++ b/app/about.html
@@ -178,6 +178,224 @@
             </div>
          </div>
       </section>
+      <section class="team">
+         <div class="container">
+            <div class="team__inner">
+               <div class="team__info">
+                  <h3 class="title team__title">
+                     Our Team
+                  </h3>
+                  <p class="team__text">
+                     Lorem ipsum dolor sit amet, conse ctetur adipi sicing elit, sed do eiusmod tempor inciLorem ipsum
+                     dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                     magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                     ea commodo consequat.
+                  </p>
+                  <a class="team__link" href="#">
+                     Join With US
+                  </a>
+               </div>
+               <div class="team__items">
+                  <div class="team__item">
+                     <div class="team__img-wrapper">
+                        <img class="team__img" src="images/team/1.jpg" alt="team photo">
+                     </div>
+                     <div class="team__item-info">
+                        <div class="team__item-member">
+                           <div class="team__item-name">
+                              Eliza Elliot
+                           </div>
+                           <div class="tema__item-occupation">
+                              Commodo tempor
+                           </div>
+                        </div>
+                        <div class="team__item-social">
+                           <a class="team__item-link" href="#">
+                              <img src="images/icons/instagram.svg" alt="instagram">
+                           </a>
+                           <a class="team__item-link" href="#">
+                              <img src="images/icons/google+.svg" alt="google+">
+                           </a>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="team__item">
+                     <div class="team__img-wrapper">
+                        <img class="team__img" src="images/team/2.jpg" alt="team photo">
+                     </div>
+                     <div class="team__item-info">
+                        <div class="team__item-member">
+                           <div class="team__item-name">
+                              Roscoe A.
+                           </div>
+                           <div class="tema__item-occupation">
+                              Commodo tempor
+                           </div>
+                        </div>
+                        <div class="team__item-social">
+                           <a class="team__item-link" href="#">
+                              <img src="images/icons/instagram.svg" alt="instagram">
+                           </a>
+                           <a class="team__item-link" href="#">
+                              <img src="images/icons/google+.svg" alt="google+">
+                           </a>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="team__item">
+                     <div class="team__img-wrapper">
+                        <img class="team__img" src="images/team/3.jpg" alt="team photo">
+                     </div>
+                     <div class="team__item-info">
+                        <div class="team__item-member">
+                           <div class="team__item-name">
+                              Ruby M.
+                           </div>
+                           <div class="tema__item-occupation">
+                              Commodo tempor
+                           </div>
+                        </div>
+                        <div class="team__item-social">
+                           <a class="team__item-link" href="#">
+                              <img src="images/icons/instagram.svg" alt="instagram">
+                           </a>
+                           <a class="team__item-link" href="#">
+                              <img src="images/icons/google+.svg" alt="google+">
+                           </a>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="team__item">
+                     <div class="team__img-wrapper">
+                        <img class="team__img" src="images/team/4.jpg" alt="team photo">
+                     </div>
+                     <div class="team__item-info">
+                        <div class="team__item-member">
+                           <div class="team__item-name">
+                              Marie F. Bloss
+                           </div>
+                           <div class="tema__item-occupation">
+                              Commodo tempor
+                           </div>
+                        </div>
+                        <div class="team__item-social">
+                           <a class="team__item-link" href="#">
+                              <img src="images/icons/instagram.svg" alt="instagram">
+                           </a>
+                           <a class="team__item-link" href="#">
+                              <img src="images/icons/google+.svg" alt="google+">
+                           </a>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <section class="blog blog--with-partners">
+         <div class="container">
+            <div class="blog__top">
+               <h3 class="blog__title title">
+                  Our Insights & Articles
+               </h3>
+               <a class="blog__link" href="#">
+                  View All
+               </a>
+            </div>
+            <div class="blog__items">
+               <div class="blog-item">
+                  <div class="blog-item__img-box">
+                     <img class="blog-item__img" src="images/blog/1.jpg" alt="image 1">
+                     <a class="blog-item__link-category" href="#">
+                        NEWS
+                     </a>
+                  </div>
+                  <div class="blog-item__content">
+                     <a class="blog-item__title-link" href="#">
+                        <h4 class="blog-item__title">
+                           Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+                        </h4>
+                     </a>
+                     <div class="blog-item__info">
+                        <div class="blog-item__date">
+                           28 JANUARY, 2020
+                        </div>
+                        <a class="blog-item__author" href="#">
+                           BY ADMIN
+                        </a>
+                     </div>
+                  </div>
+               </div>
+               <div class="blog-item">
+                  <div class="blog-item__img-box">
+                     <img class="blog-item__img" src="images/blog/2.jpg" alt="image 2">
+                     <a class="blog-item__link-category" href="#">
+                        NEWS
+                     </a>
+                  </div>
+                  <div class="blog-item__content">
+                     <a class="blog-item__title-link" href="#">
+                        <h4 class="blog-item__title">
+                           Aonsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore 
+                        </h4>
+                     </a>
+                     <div class="blog-item__info">
+                        <div class="blog-item__date">
+                           28 JANUARY, 2020
+                        </div>
+                        <a class="blog-item__author" href="#">
+                           BY ADMIN
+                        </a>
+                     </div>
+                  </div>
+               </div>
+               <div class="blog-item">
+                  <div class="blog-item__img-box">
+                     <img class="blog-item__img" src="images/blog/3.jpg" alt="image 1">
+                     <a class="blog-item__link-category" href="#">
+                        NEWS
+                     </a>
+                  </div>
+                  <div class="blog-item__content">
+                     <a class="blog-item__title-link" href="#">
+                        <h4 class="blog-item__title">
+                           Rncididunt ut labore et dolore magna aliqua. Ut enim 
+                        </h4>
+                     </a>
+                     <div class="blog-item__info">
+                        <div class="blog-item__date">
+                           28 JANUARY, 2020
+                        </div>
+                        <a class="blog-item__author" href="#">
+                           BY ADMIN
+                        </a>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <section class="partners partners--with-blog">
+         <div class="container">
+            <ul class="partners__list">
+               <li class="partners__list-item">
+                  <img class="partners__list-img" src="images/partners/1.png" alt="photo 1">
+               </li>
+               <li class="partners__list-item">
+                  <img class="partners__list-img" src="images/partners/2.png" alt="photo 2">
+               </li>
+               <li class="partners__list-item">
+                  <img class="partners__list-img" src="images/partners/3.png" alt="photo 3">
+               </li>
+               <li class="partners__list-item">
+                  <img class="partners__list-img" src="images/partners/4.png" alt="photo 4">
+               </li>
+               <li class="partners__list-item">
+                  <img class="partners__list-img" src="images/partners/5.png" alt="photo 5">
+               </li>
+            </ul>
+         </div>
+      </section>
    </main>
 
    <footer class="footer">
